# learning-app

./: .gitignore  README.md  mypy.ini  pyproject.toml
application/: dto.py  use_cases.py
core/: settings.py  urls.py
docs/: learning_log.md
domain/: models.py  repository_interfaces.py
infrastructure/: mappers.py  repositories.py
infrastructure/django_app/: admin.py  apps.py  models.py  urls.py  views.py
infrastructure/django_app/migrations/: 0001_initial.py  0002_rename_content_learningblockmodel_contents.py
